Adpatation to work with Cascade LN
Signed-off-by: Francisco Martín Rico <fmrico@gmail.com>

--- a/bt_nodes/perception/CMakeLists.txt
+++ b/bt_nodes/perception/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rclcpp_cascade_lifecycle REQUIRED)
 find_package(behaviortree_cpp_v3 REQUIRED)
 find_package(yolov8_msgs REQUIRED)
 find_package(moveit_msgs REQUIRED)
@@ -18,11 +19,13 @@ find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(perception_system REQUIRED)
+find_package(perception_system_interfaces REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
 set(dependencies
   rclcpp
+  rclcpp_cascade_lifecycle
   rclpy
   behaviortree_cpp_v3
   yolov8_msgs
@@ -35,6 +38,7 @@ set(dependencies
   rclcpp_action
   behaviortree_cpp_v3
   perception_system
+  perception_system_interfaces
 )
 
 include_directories(include)
