--- a/bt_nodes/configuration/package.xml
+++ b/bt_nodes/configuration/package.xml
@@ -11,6 +11,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclcpp_cascade_lifecycle</depend>
   <depend>rclcpp_action</depend>
   <depend>behaviortree_cpp_v3</depend>
   <depend>geometry_msgs</depend>
