--- a/bt_nodes/hri/package.xml
+++ b/bt_nodes/hri/package.xml
@@ -9,6 +9,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   
   <depend>rclcpp</depend>
+  <depend>rclcpp_cascade_lifecycle</depend>
   <depend>rclcpp_action</depend>
   <depend>behaviortree_cpp_v3</depend>
   <depend>audio_common_msgs</depend>
