--- a/bt_nodes/perception/package.xml
+++ b/bt_nodes/perception/package.xml
@@ -14,6 +14,7 @@
   <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclcpp_cascade_lifecycle</depend>
   <depend>behaviortree_cpp_v3</depend>
   <depend>yolov8_msgs</depend>
   <depend>moveit_msgs</depend>
@@ -25,6 +26,7 @@
   <depend>tf2</depend>
   <depend>rclcpp_action</depend>
   <depend>perception_system</depend>
+  <depend>perception_system_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
