Add behavior_main to launch testbeds
Signed-off-by: Francisco Martín Rico <fmrico@gmail.com>

--- a/robocup_bringup/CMakeLists.txt
+++ b/robocup_bringup/CMakeLists.txt
@@ -6,11 +6,48 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_cascade_lifecycle REQUIRED)
+
+find_package(arm REQUIRED)
+find_package(configuration REQUIRED)
+find_package(hri REQUIRED)
+find_package(motion REQUIRED)
+find_package(perception REQUIRED)
+
 
 set(CMAKE_CXX_STANDARD 17)
 
-install(DIRECTORY launch params maps
-        DESTINATION share/${PROJECT_NAME})
+set(dependencies
+  rclcpp
+  rclcpp_cascade_lifecycle
+  behaviortree_cpp_v3
+  arm
+  configuration
+  hri
+  motion
+  perception
+)
+
+include_directories(include)
+
+add_executable(behaviors_main src/behaviors_main.cpp)
+ament_target_dependencies(behaviors_main ${dependencies})
+
+
+install(DIRECTORY bt_xml params
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(DIRECTORY launch params maps DESTINATION share/${PROJECT_NAME})
+
+install(TARGETS
+  behaviors_main
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
+)
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
