--- a/robocup_bringup/package.xml
+++ b/robocup_bringup/package.xml
@@ -8,6 +8,16 @@
   <license>Apache License, Version 2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>rclcpp</depend>
+  <depend>rclcpp_cascade_lifecycle</depend>
+  <depend>behaviortree_cpp_v3</depend>
+
+  <exec_depend>arm</exec_depend>
+  <exec_depend>configuration</exec_depend>
+  <exec_depend>hri</exec_depend>
+  <exec_depend>motion</exec_depend>
+  <exec_depend>perception</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
