--- a/bt_nodes/arm/CMakeLists.txt
+++ b/bt_nodes/arm/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(behaviortree_cpp_v3 REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rclcpp_cascade_lifecycle REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(manipulation_interfaces REQUIRED)
 # uncomment the following section in order to fill in
@@ -20,6 +21,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(dependencies
   behaviortree_cpp_v3
   rclcpp
+  rclcpp_cascade_lifecycle
   rclcpp_action
   manipulation_interfaces
 )
