--- a/bt_nodes/arm/package.xml
+++ b/bt_nodes/arm/package.xml
@@ -11,6 +11,7 @@
   <depend>behaviortree_cpp_v3</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend>
+  <depend>rclcpp_cascade_lifecycle</depend>
   <depend>manipulation_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
