--- a/bt_nodes/hri/CMakeLists.txt
+++ b/bt_nodes/hri/CMakeLists.txt
@@ -47,6 +47,9 @@ list(APPEND plugin_libs listen_bt_node)
 add_library(generate_text_from_objects_bt_node SHARED src/hri/GenerateTextFromObjects.cpp)
 list(APPEND plugin_libs generate_text_from_objects_bt_node)
 
+add_library(store_detection_bt_node SHARED src/hri/dialog/store_detection.cpp)
+list(APPEND plugin_libs store_detection_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
 ament_target_dependencies(${bt_plugin} ${dependencies})
 target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
