nav params changed to stop loading the clear layer

--- a/robocup_bringup/params/tiago_nav_params.yaml
+++ b/robocup_bringup/params/tiago_nav_params.yaml
@@ -236,7 +236,7 @@ global_costmap:
       robot_radius: 0.275
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer", "clear_people_layer"]
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"] #, "clear_people_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -258,8 +258,8 @@ global_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
-      clear_people_layer:
-        plugin: "nav2_costmap_2d::ClearPeopleLayer"
+      # clear_people_layer:
+      #   plugin: "nav2_costmap_2d::ClearPeopleLayer"
         
       always_send_full_costmap: True
 
