--- a/bt_nodes/perception/package.xml
+++ b/bt_nodes/perception/package.xml
@@ -25,6 +25,8 @@
   <depend>tf2</depend>
   <depend>rclcpp_action</depend>
   <depend>perception_system</depend>
+  <depend>perception_system_interfaces</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
