--- a/robocup_bringup/params/tiago_nav_params.yaml
+++ b/robocup_bringup/params/tiago_nav_params.yaml
@@ -37,7 +37,7 @@ amcl:
     z_max: 0.05
     z_rand: 0.5
     z_short: 0.05
-    scan_topic: /scan
+    scan_topic: /scan_raw
     set_initial_pose: true
     initial_pose:
       x: 0.5156184016639794
@@ -50,7 +50,7 @@ bt_navigator:
     use_sim_time: False
     global_frame: map
     robot_base_frame: base_link
-    odom_topic: /ground_truth_odom
+    odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
@@ -211,7 +211,7 @@ local_costmap:
         mark_threshold: 0
         observation_sources: scan
         scan:
-          topic: /scan
+          topic: /scan_raw
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -236,13 +236,13 @@ global_costmap:
       robot_radius: 0.275
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"] #, "clear_people_layer"]
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer", "clear_people_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
         observation_sources: scan
         scan:
-          topic: /scan
+          topic: /scan_raw
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -258,8 +258,11 @@ global_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
-      # clear_people_layer:
-      #   plugin: "nav2_costmap_2d::ClearPeopleLayer"
+      clear_people_layer:
+        plugin: "nav2_costmap_2d::ClearPeopleLayer"
+        person_radious: 0.3
+        person_frame: person_0
+        enabled: True
         
       always_send_full_costmap: True
 
@@ -345,7 +348,7 @@ velocity_smoother:
     min_velocity: [-0.26, 0.0, -1.0]
     max_accel: [2.5, 0.0, 3.2]
     max_decel: [-2.5, 0.0, -3.2]
-    odom_topic: "/ground_truth_odom"
+    odom_topic: "/odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
@@ -397,7 +400,7 @@ slam_toolbox:
     resolution: 0.05
     scan_buffer_maximum_scan_distance: 10.0
     scan_buffer_size: 10
-    scan_topic: /scan
+    scan_topic: /scan_raw
     solver_plugin: solver_plugins::CeresSolver
     stack_size_to_use: 40000000
     tf_buffer_duration: 30.0
