--- a/robocup_bringup/params/receptionist_params.yaml
+++ b/robocup_bringup/params/receptionist_params.yaml
@@ -7,6 +7,7 @@
     offer_pose: "offer"
     person_id: 001122334455
     waypoints_names: ["entrance", "party"]
+    allow_duplicate_names: false
     waypoints:
       entrance: [-1.4, 6.82, 0.0]
       party: [-0.2, 4.33, 0.0]
