--- a/robocup_bringup/params/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/params/tiago_nav_follow_params.yaml
@@ -234,8 +234,8 @@ global_costmap:
         inflation_radius: 0.55
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
-        person_radious: 0.15
-        person_frame: person_0
+        person_radious: 0.5
+        person_frame: person_0_filtered
       always_send_full_costmap: True
 
 map_server:
@@ -360,13 +360,13 @@ slam_toolbox:
     # - -0.9
     # - 3.6
     # - 1.56
-    map_update_interval: 0.1
+    map_update_interval: 5.0
     max_laser_range: 20.0
     minimum_angle_penalty: 0.9
     minimum_distance_penalty: 0.5
     minimum_time_interval: 0.1
-    minimum_travel_distance: 0.01
-    minimum_travel_heading: 0.01
+    minimum_travel_distance: 0.5
+    minimum_travel_heading: 0.5
     mode: localization
     odom_frame: odom
     resolution: 0.05
