set_up day updates

--- a/robocup_bringup/params/receptionist_params.yaml
+++ b/robocup_bringup/params/receptionist_params.yaml
@@ -5,10 +5,10 @@
     home_position: [0.0, 0.0, 0.0]
     home_pose: "home"
     offer_pose: "offer"
-    host_drink: "Jaggermeister"
-    host_name: "Alberto"
+    host_drink: "Coke"
+    host_name: "Irene"
     person_id: 001122334455
     waypoints_names: ["entrance", "party"]
     waypoints:
-      entrance: [-1.4, 6.82, 0.0]
-      party: [-0.2, 4.33, 0.0]
+      entrance: [-0.711, -0.912, -3.078]
+      party: [0.887, -0.932, -1.686]
