--- a/robocup_bringup/params/receptionist_params.yaml
+++ b/robocup_bringup/params/receptionist_params.yaml
@@ -5,10 +5,10 @@
     home_position: [0.0, 0.0, 0.0]
     home_pose: "home"
     offer_pose: "offer"
-    host_drink: "Coke"
-    host_name: "Irene"
+    host_drink: "Iced tea"
+    host_name: "Noah"
     person_id: 001122334455
     waypoints_names: ["entrance", "party"]
     waypoints:
-      entrance: [-0.711, -0.912, -3.078]
+      entrance: [-0.711, -0.612, -3.078]
       party: [0.887, -0.932, -1.686]
