--- a/robocup_bringup/params/tiago_nav_params.yaml
+++ b/robocup_bringup/params/tiago_nav_params.yaml
@@ -207,11 +207,11 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.29
-      plugins: ["voxel_layer", "inflation_layer"]
+      plugins: ["voxel_layer", "inflation_layer", "clear_people_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.40
+        inflation_radius: 0.35
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -235,6 +235,10 @@ local_costmap:
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
+      clear_people_layer:
+        plugin: "nav2_costmap_2d::ClearPeopleLayer"
+        person_radious: 1.0
+        person_frame: person_0_filtered
       always_send_full_costmap: True
 
 global_costmap:
@@ -248,7 +252,7 @@ global_costmap:
       robot_radius: 0.29
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer", "clear_people_layer"]
+      plugins: ["static_layer", "inflation_layer", "clear_people_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -269,11 +273,11 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.4
+        inflation_radius: 0.2
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
-        person_radious: 0.3
-        person_frame: person_0
+        person_radious: 1.0
+        person_frame: person_0_filtered
         enabled: True
         
       always_send_full_costmap: True
