storing groceries tested until pick

--- a/bt_nodes/arm/CMakeLists.txt
+++ b/bt_nodes/arm/CMakeLists.txt
@@ -44,6 +44,9 @@ list(APPEND plugin_libs point_at_bt_node)
 add_library(place_bt_node SHARED src/manipulation/place_object.cpp)
 list(APPEND plugin_libs place_bt_node)
 
+add_library(move_joint_bt_node SHARED src/manipulation/move_joint.cpp)
+list(APPEND plugin_libs move_joint_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
   target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
