--- a/robocup_bringup/config/carry_my_luggage/carry_my_luggage.yaml
+++ b/robocup_bringup/config/carry_my_luggage/carry_my_luggage.yaml
@@ -1,8 +1,8 @@
 behaviors_main:
   ros__parameters:
     use_sim_time: False
-    cam_frame: "head_front_camera_link_color_optical_frame"
-    home_position: [0.0, 0.0, 0.0]
+    cam_frame: "head_front_camera_rgb_frame"
+    home_position: [54.701, 1.360, 0.001]
     home_pose: "home"
     offer_pose: "offer"
     person_id: 001122334455
@@ -23,3 +23,4 @@ behaviors_main:
     - follow_entity_bt_node
     - goal_publisher_bt_node
     - configure_navigate_back_bt_node
+    - set_start_position_bt_node
