--- a/robocup_bringup/config/receptionist/receptionist_params.yaml
+++ b/robocup_bringup/config/receptionist/receptionist_params.yaml
@@ -1,16 +1,16 @@
 /**:
   ros__parameters:
     use_sim_time: False
-    cam_frame: "head_front_camera_link_color_optical_frame"
-    home_position: [0.0, 0.0, 0.0]
+    cam_frame: "head_front_camera_rgb_frame"
+    home_position: [54.701, 1.360, 0.001]
     home_pose: "home"
     offer_pose: "offer"
     person_id: 001122334455
     waypoints_names: ["entrance", "party"]
     # allow_duplicate_names: false
     waypoints:
-      entrance: [2.985, -1.320, -2.986]
-      party: [5.683, -1.309, 0.158]
+      party: [51.660, 1.405, 0.001]
+      entrance: [54.701, 1.360, 0.001]
 
 behaviors_main:
   ros__parameters:
@@ -33,3 +33,4 @@ behaviors_main:
     - move_to_predefined_bt_node
     - add_guest_to_count_bt_node
     - filter_entity_bt_node
+    - set_start_position_bt_node
