storing groceries completed

--- a/bt_nodes/perception/CMakeLists.txt
+++ b/bt_nodes/perception/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(perception_system REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(perception_system_interfaces REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 # find_package(backward_ros REQUIRED)
 
 
@@ -45,6 +46,7 @@ set(dependencies
   OpenCV
   perception_system_interfaces
   sensor_msgs
+  std_srvs
   # backward_ros
 )
 
@@ -85,6 +87,9 @@ list(APPEND plugin_libs is_door_open_bt_node)
 
 add_library(extract_cabinet_place_pose_bt_node SHARED src/perception/extract_cabinet_place_pose.cpp)
 list(APPEND plugin_libs extract_cabinet_place_pose_bt_node)
+
+add_library(clear_octomap_bt_node SHARED src/perception/clear_octomap.cpp)
+list(APPEND plugin_libs clear_octomap_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
 ament_target_dependencies(${bt_plugin} ${dependencies})
