--- a/robocup_bringup/config/receptionist/tiago_nav_params.yaml
+++ b/robocup_bringup/config/receptionist/tiago_nav_params.yaml
@@ -219,7 +219,7 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.29
-      plugins: ["obstacle_layer" ,"inflation_layer", "clear_people_layer"]
+      plugins: ["obstacle_layer" ,"inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -278,7 +278,7 @@ global_costmap:
       robot_radius: 0.29
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "inflation_layer", "clear_people_layer"]
+      plugins: ["static_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
