--- a/bt_nodes/hri/package.xml
+++ b/bt_nodes/hri/package.xml
@@ -18,6 +18,7 @@
   <depend>moveit_msgs</depend>
   <depend>shape_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>gpsr_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
