--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -45,8 +45,11 @@ list(APPEND plugin_libs add_guest_to_count_bt_node)
 add_library(set_start_position_bt_node SHARED src/configuration/SetStartPosition.cpp)
 list(APPEND plugin_libs set_start_position_bt_node)
 
-add_library(deferred_bt_node SHARED src/configuration/DeferredBT.cpp)
+add_library(deferred_bt_node SHARED src/configuration/Deferred.cpp)
 list(APPEND plugin_libs deferred_bt_node)
+
+add_library(setup_gpsr_bt_node SHARED src/configuration/Setup_gpsr.cpp)
+list(APPEND plugin_libs setup_gpsr_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
